--- a/index.html
+++ b/index.html
@@ -324,6 +324,19 @@
             </ul>
         </section>
         </div>
+        <section class="section-form">
+            <h5 class="text-mail">Підпишіться на розсилку</h5>
+            <form>
+                <div class="section-input-wripper">
+                <input type="email" name="mail" placeholder="E-mail" class="section-input">
+                <button type="submit" class="footer-form-btn">Підписатися 
+                    <svg class="section-form-icon" width="24" height="24">
+                        <use href="./img/icons.svg/symbol-defs.svg#icon-send"></use>
+                    </svg>
+                </button>
+                </div>
+            </form>
+        </section>
         </div>
     </footer>
 
@@ -335,8 +348,54 @@
                 <svg class="modal-icon-close" width="11" height="11">
                   <use href="./img/icons.svg/Vector.svg#icon-Vector"></use>
                 </svg>
-            </button>
+            </button>   
+            <div class="modal-form"> 
+                <h1 class="lebel-description">Залиште свої дані, ми вам передзвонимо</h1> 
+                <div class="wapper-form">
+                <form class="form">
+                <label class="label">
+                    <span class="label-text">Ім'я</span>
+                    <div class="wapper-icon-label">
+                    <svg class="icon-label" width="12" height="12">
+                        <use href="./img/icons.svg/symbol-defs.svg#person"></use>
+                      </svg>
+                    <input type="text" name="username" class="input">
+                    </div>
+                </label>
+                <label class="label">
+                    <span class="label-text">Телефон</span>
+                    <div class="wapper-icon-label">
+                    <svg class="icon-label" width="13" height="13">
+                        <use href="./img/icons.svg/symbol-defs.svg#tel"></use>
+                      </svg>
+                    <input type="tel" name="tel" class="input">
+                    </div>
+                </label>
+                <label class="label">
+                    <span class="label-text">Пошта</span>
+                    <div class="wapper-icon-label">
+                    <svg class="icon-label" width="16" height="12">
+                        <use href="./img/icons.svg/symbol-defs.svg#mail"></use>
+                      </svg>
+                    <input type="email" name="tel" class="input">
+                    </div>
+                </label>
+                <label class="label-comment">
+                    <span class="label-text">Коментар</span>
+                    <textarea name="comment" cols="30" rows="10" placeholder="Введіть текст" class="comment-text"></textarea>
+                </label>
+                <label class="label-text-agermeent">
+                    <input type="checkbox" name="agermeent" class="agreement-checkbox">  
+                    <span class="label-text-checkbox">Погоджуюся з розсилкою та приймаю <a href="" class="label-link">Умови договору</a></span>
+                </label>
+                <div class="wapper-btn-form">
+                <button type="submit" class="form-btn">Відправити</button>
+                </div>
+                </form>
+            </div>
+            </div>   
         </div>
+
     </div>
     <script>
         (() => {
