--- a/portfolio.html
+++ b/portfolio.html
@@ -213,6 +213,19 @@
                     </ul>
                 </section>
             </div>
+            <section class="section-form">
+                <h5 class="text-mail">Підпишіться на розсилку</h5>
+                <form>
+                    <div class="section-input-wripper">
+                    <input type="email" name="mail" placeholder="E-mail" class="section-input">
+                    <button type="submit" class="footer-form-btn">Підписатися 
+                        <svg class="section-form-icon" width="24" height="24">
+                            <use href="./img/icons.svg/symbol-defs.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                    </div>
+                </form>
+            </section>
         </div>
     </footer>
 </body>
