--- a/index.html
+++ b/index.html
@@ -355,29 +355,30 @@
                 <form class="form">
                 <label class="label">
                     <span class="label-text">Ім'я</span>
-                    <div class="wapper-icon-label">
+                    <div class="wapper-icon-label">                    
+                    <input type="text" name="username" class="input">
                     <svg class="icon-label" width="12" height="12">
                         <use href="./img/icons.svg/symbol-defs.svg#person"></use>
                       </svg>
-                    <input type="text" name="username" class="input">
                     </div>
                 </label>
                 <label class="label">
                     <span class="label-text">Телефон</span>
                     <div class="wapper-icon-label">
+                    <input type="tel" name="tel" class="input">
                     <svg class="icon-label" width="13" height="13">
                         <use href="./img/icons.svg/symbol-defs.svg#tel"></use>
                       </svg>
-                    <input type="tel" name="tel" class="input">
+
                     </div>
                 </label>
                 <label class="label">
                     <span class="label-text">Пошта</span>
                     <div class="wapper-icon-label">
+                    <input type="email" name="tel" class="input">
                     <svg class="icon-label" width="16" height="12">
                         <use href="./img/icons.svg/symbol-defs.svg#mail"></use>
                       </svg>
-                    <input type="email" name="tel" class="input">
                     </div>
                 </label>
                 <label class="label-comment">
@@ -385,7 +386,12 @@
                     <textarea name="comment" cols="30" rows="10" placeholder="Введіть текст" class="comment-text"></textarea>
                 </label>
                 <label class="label-text-agermeent">
-                    <input type="checkbox" name="agermeent" class="agreement-checkbox">  
+                    <div class="ffwwf">
+                    <input type="checkbox" name="agermeent" class="agreement-checkbox"> 
+                    <svg class="label-text-icon" width="13" height="10">
+                      <use href="./img/icons.svg/symbol-defs.svg#accept"></use>
+                    </svg> 
+                    </div>
                     <span class="label-text-checkbox">Погоджуюся з розсилкою та приймаю <a href="" class="label-link">Умови договору</a></span>
                 </label>
                 <div class="wapper-btn-form">
