--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
                     <textarea name="comment" cols="30" rows="10" placeholder="Введіть текст" class="comment-text"></textarea>
                 </label>
                 <label class="label-text-agermeent">
-                    <div class="ffwwf">
+                    <div class="label-text-wrapper">
                     <input type="checkbox" name="agermeent" class="agreement-checkbox"> 
-                    <svg class="label-text-icon" width="13" height="10">
+                    <svg class="label-text-icon" width="13" height="11">
                       <use href="./img/icons.svg/symbol-defs.svg#accept"></use>
                     </svg> 
                     </div>
